--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
+            <img class="first-slide" src="picture/school.jpg" alt="First slide">
             <div class="container">
               <div class="carousel-caption text-left">
                 <h1>平日的校園照片</h1>
@@ -71,7 +71,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img class="second-slide" src="data:image/gif;base64,https://technews.tw/2015/09/02/new-google-logo-announced/" alt="Second slide">
+            <img class="second-slide" src="picture/35766665_10209346814067748_8337751876363616256_n.jpg" alt="Second slide">
             <div class="container">
               <div class="carousel-caption">
                 <h1>我希望可以去實習的地方</h1>
@@ -80,11 +80,11 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+            <img class="third-slide" src="picture/health%20money.jpg" alt="Third slide">
             <div class="container">
               <div class="carousel-caption text-right">
-                <h1>一個照片自己體驗</h1>
-                <p>每個人不同角度思考，不同的理解</p>
+                <h1 id="test">一個照片自己體驗</h1>
+                <p id="test">每個人不同角度思考，不同的理解</p>
                  </div>
             </div>
           </div>
@@ -109,74 +109,38 @@
         <!-- Three columns of text below the carousel -->
         <div class="row">
           <div class="col-lg-4">
-            <img class="square" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+            <img class="square" 
+                 src="picture/doctor.jpg" alt="Generic placeholder image" width="140" height="140">
             <h2>阿寶看醫生</h2>
             <p>今天阿寶去看醫生，他對醫生說:“我實在是太胖了，我該怎麼辦?”
                 醫生說:“那你每天早餐喝牛奶和吃水煮蛋，午餐吃水煮蛋和饅頭，晚餐喝水和吃饅頭。”
                 阿寶說:“好的，那是要飯後吃還是飯前吃?”
                 醫生說:你可以走了.......</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-          </div><!-- /.col-lg-4 -->
+                      </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img class="square" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+            <img class="square" src="picture/%E6%B3%A8%E6%84%8F.jpg"
+                 alt="Generic placeholder image" width="140" height="140">
             <h2>注意！</h2>
             <p>甲乙丙三人睡在同一張床上,而乙是睡在中間的。有一天乙想打噴嚏,轉去左邊會噴到甲,轉去右邊會噴到丙,往上打會噴到每個人。於是,三人決定以後如果乙要打噴嚏,就說:“注意！”,甲和丙就會蓋被子。有一天,乙想放屁,然後他就喊“注意！”</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-          </div><!-- /.col-lg-4 -->
+            </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img class="square" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+            <img class="square" src="picture/images.jpg"
+                 alt="Generic placeholder image" width="140" height="140">
             <h2>多餘的</h2>
             <p>有一次老師在改同學的考卷~看到小銘寫了一句造句~他寫~我媽媽是一位六十多歲的老婦人~老師把它的{老}圈起來~寫著{多餘的}!!把考卷發下來後~小名訂正了考卷!!老師看了差點昏倒!!他改成~我媽媽是個六十多歲多餘的老婦人....</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-          </div><!-- /.col-lg-4 -->
+           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
 
         <!-- START THE FEATURETTES -->
 
-        <hr class="featurette-divider">
-
-        <div class="row featurette">
-          <div class="col-md-7">
-            <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-          </div>
-          <div class="col-md-5">
-            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-          </div>
-        </div>
-
-        <hr class="featurette-divider">
-
-        <div class="row featurette">
-          <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-          </div>
-          <div class="col-md-5 order-md-1">
-            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-          </div>
-        </div>
-
-        <hr class="featurette-divider">
-
-        <div class="row featurette">
-          <div class="col-md-7">
-            <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-          </div>
-          <div class="col-md-5">
-            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-          </div>
-        </div>
-
-        <hr class="featurette-divider">
+        
 
         <!-- /END THE FEATURETTES -->
 
       </div><!-- /.container -->
 
-
+<p></p>
       <!-- FOOTER -->
       <footer class="container">
         <p class="float-right"><a href="#">Back to top</a></p>
